# bristol-kafka-client

./: README.md  pyproject.toml  setup.cfg
bristol_kafka_client/: _base.py  async_client.py  client.py  exceptions.py  message_producing.py  services.py  settings.py  types.py  utils.py
tests/: conftest.py  test_async_client.py  test_kafka.py  test_message_producing.py  test_sync_client.py  test_utils.py
