[tool.poetry]
name = "bristol-kafka-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bristol_kafka_client"}]

[tool.poetry.dependencies]
python = "^3.9"
kafka-python = "^2.0.2"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
wemake-python-styleguide = "^0.17.0"
blue = "^0.9.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
