[tool.poetry]
name = "bristol-kafka-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bristol_kafka_client"}]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
pydantic = "^2.8.2"
aiokafka = "^0.10.0"
pydantic-settings = "^2.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.3.1"
ruff = "^0.4.10"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
