[project]
name = "bristol-kafka-client"
version = "1.0.0"
description = ""
authors = [
    { name = "Vitaliy Mikhalchenko", email = "vitaliy.mikhalchenko@bristolcapital.ru" },
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
dependencies = [
    "kafka-python>=2.0.2,<3.0",
    "pydantic>=2.8.2,<3.0",
    "aiokafka>=0.10.0,<0.11",
    "pydantic-settings>=2.6.0,<3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.2.0,<2.0",
    "pytest>=7.3.1,<8.0",
    "ruff>=0.4.10,<0.5",
    "pytest-asyncio>=0.23.7,<0.24",
]

[tool.uv]
allow-insecure-host = ["pypi.org"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bristol_kafka_client"]
